<resources>
    <string name="app_name">სოფლიდან</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="email_hint">email</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="blog">ბლოგი</string>
    <string name="about_us">ჩვენს შესახებ</string>

    <string-array name="district_array">
        <item>- აირჩიეთ უბანი -</item>
        <item>ავლაბარი</item>
        <item>ავჭალა</item>
        <item>ბაგები </item>
        <item>გლდანის მასივი</item>
        <item>დიდი დიღომი</item>
        <item>დიდუბე</item>
        <item>დიღმის მასივი</item>
        <item>ვაზისუბანი</item>
        <item> ვაკე </item>
        <item>ვარკეთილი</item>
        <item>ვაშლიჯვარი</item>
        <item>ვეძისი</item>
        <item>ზემელი</item>
        <item>ზღვისუბანი</item>
        <item>ისანი</item>
        <item>კოჯორი</item>
        <item>კრწანისი</item>
        <item>მთაწმინდა</item>
        <item>მუხიანი </item>
        <item>ნავთლუღი</item>
        <item>ნაძალადევი</item>
        <item>ორთაჭალა</item>
        <item>საბურთალო</item>
        <item>სანზონა</item>
        <item>სვანეთისუბანი</item>
        <item>ტაბახმელა</item>
        <item>ფონიჭალა</item>
        <item>ჩუღურეთი</item>
        <item>წავკისი</item>
        <item>წყნეთი</item>
    </string-array>

    <string-array name="city_array">
        <item>- ქალაქი -</item>
        <item>თბილისი</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_about_us">ჩვენს შესახებ</string>
    <string name="menu_item_fb">www.facebook.com/soplidan</string>
    <string name="menu_item_soplidan_ge">www.soplidan.ge</string>
    <string name="menu_item_info">info@soplidan.ge</string>
    <string name="menu_item_phone_number">+995 557 470 441</string>
    <string name="menu_item_blog">ბლოგი</string>
    <string name="not_in_sale">არაა გაყიდვაში</string>
    <string name="place_order">შეკვეთის განთავსება</string>
    <string name="checkout_sum">ჯამი:</string>
    <string name="continue_button">გაგრძელება</string>
    <string name="delivery_place">შეკვეთის მიწოდების ადგილი</string>
    <string name="edit_text_name">სახელი *</string>
    <string name="edit_text_last_name">გვარი *</string>
    <string name="edit_text_email_required">Email *</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_address">მისამართი *</string>
    <string name="guest_edit_text_address">მისამართი</string>
    <string name="edit_text_phone">ტელეფონი *</string>
    <string name="edit_text_id_number">პირადი ნომერი *</string>
    <string name="organization_question">ხართ ორგანიზაცია?</string>
    <string name="yes">კი</string>
    <string name="no">არა</string>
    <string name="organization_name">ორგანიზაციის დასახელება</string>
    <string name="identification_code">საიდენტიფიკაციო კოდი</string>
    <string name="invoice_question">ინვოისის გამოგზავნის მისამართი იგივეა რაც მიწოდების მისამართი?</string>
    <string name="delivery_terms">მიწოდების პირობები</string>
    <string name="delivery_product">პროდუქტის მოტანა</string>
    <string name="_16_00_20_00_clock">16:00-20:00 საათამდე</string>
    <string name="_20_00_clock">20:00 საათის შემდეგ</string>
    <string name="less_then_30_lari">30 ლარამდე შეკვეთილი პროდუქტის მიწოდება თბილისში - 3 ლარი;</string>
    <string name="more_then_30_lari">30 ლარზე მეტი შეკვეთილი პროდუქტის მიწოდება თბილისში - უფასო;</string>
    <string name="delivery_tbilisi_surrounds">თბილისის შემოგარენში (წყნეთი,კოჯორი, წავკისი და ა.შ) პროდუქტის მიწოდების ღირებულებაა-8 ლარი;</string>
    <string name="delivery_info">გთხოვთ, გაითვალისწინეთ, პროდუქტის ადგილზე მიწოდება ხდება შეკვეთის გაკეთების მომდევნო დღეს 16:00-ის შემდეგ. კვირა დღეს მიწოდება არ ხდება. თუ თქვენ შეკვეთას აკეთებთ შაბათს და კვირას პროდუქტებს მიიღებთ ორშაბათს 16:00-ის შემდეგ. გთხოვთ, პირადად შეამოწმოთ შეძენილი პროდუქცია, წუნის აღმოჩენის შემთხვევაში გთხოვთ დაგვიკავშირდეთ. თუ გაქვთ კითხვები, გთხოვთ დაგვიკავშირდეთ: 557 470 441</string>
    <string name="authorization_as_guest">ავტორიზება როგორც სტუმარი</string>
    <string name="no_internet_connection">ინტერნეტთან კავშირი ვერ ხერხდება</string>
    <string name="please_check_your_connection">ინფორმაცის სერვერიდან ჩამოსატვირთად აუცილებელია ინტერნეტთან წვდომა, გთხოვთ შეამოწმოთ თქვენი ინტერნეტ  კავშირი</string>
    <string name="ordered_products">შეკვეთილი პროდუქცია</string>
    <string name="transportation_cost">ტრანსპორტირების ღირებულება</string>
    <string name="promo_code">პრომო-კოდი</string>
    <string name="sum">სულ ჯამი</string>
    <string name="payment_methods">გადახდის მეთოდები</string>
    <string name="paying">თანხის გადახდა</string>
    <string name="visa_mastercard">Visa/MasterCard</string>
    <string name="card_payment_in_place">ბარათით გადახდა ადგილზე</string>
    <string name="bank_payment">საბანკო გადარიცხვა მხოლოდ იურიდიული პირებისთვის</string>
    <string name="payment_in_place">ნაღდი ანგარიშ სწორება ადგილზე</string>
    <string name="leave_message">შეტყობინების დატოვება</string>
    <string name="accept_terms_and_conditions">მონიშნეთ თუ თქვენ ეთანხმებით მომსახურების პირობებს</string>
    <string name="terms_and_conditions">მომსახურების პირობები</string>
    <string name="add_to_basket">დაამატე კალათაში</string>
    <string name="about_us_text">შპს "სოფლიდან" 2015 წელს დაარსდა. (ს/კ 405102053) კომპანიის მიზანია თბილისის მოსახლეობისათვის ჯანსაღი პროდუქტის მიწოდება. ყველა ოჯახს, რომელსაც სურვილი აქვს იკვებებოდეს ნატურალური პროდუქტით, შეუძლია ადგილზე მიიღოს ყველაფერი, რასაც საიტზე შეიძენს. კომპანია აკონტროლებს და იცავს პროდუქტის ტრანსპორტირების, შენახვის და დაფასოების წესებს სურსათის ეროვნული სააგენტოს ნორმებით. პროდუქტების შეძენა ხდება გლეხებისგან და ფერმერებისგან საქართველოს სხვადასხვა კუთხეში. პროდუქტები დაფასოებული და შეფუთულია.</string>
    <string name="our_partnerships">ჩვენი პარტნიორები</string>
    <string name="Sunflower">Sunflower</string>
    <string name="foki">ფოკის მონასტერი</string>
    <string name="meat">ხორცი</string>
    <string name="milk_eggs">რძე და კვერცხი</string>
    <string name="vegetables">ბოსტნეული</string>
    <string name="green_lisi">მწვანე ლისი</string>
    <string name="bio_vegetables">ბიო ბოსტნეული</string>
    <string name="sunflower">Sunflower</string>
    <string name="fokis_monastery">ფოკის მონასტერი</string>
    <string name="fruit">ხილი</string>
    <string name="sweets">ნუგბარი</string>
    <string name="drinks">სასმელი</string>
    <string name="oil_vinegar">ზეთი და ძმარი</string>
    <string name="tea">ჩაი</string>
    <string name="marinade">მწნილი</string>
    <string name="flavour">სუნელები</string>
    <string name="flour">ფქვილეული</string>
    <string name="other">სხვადასხვა</string>
    <string name="search_hint">ძიება საიტზე</string>
    <string name="identification_code_error">გთხოვთ მიუთითეთ საიდენთიფიკაციო კოდი(9 სიმბოლო)</string>

</resources>
