<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/order_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/ordered_products"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/order_header"
        android:layout_marginTop="35dp"
        android:text="@string/transportation_cost" />

    <TextView
        android:id="@+id/shipping_cost_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/order_header"
        android:layout_marginTop="35dp"
        android:text="3GEL"
        android:textSize="15sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/promo_code_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipping_cost_id"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promo_code"
            android:inputType="text"
            android:id="@+id/editText" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/promo_code_id"
        android:layout_marginTop="30dp"
        android:text="@string/sum" />

    <TextView
        android:id="@+id/total_price_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/promo_code_id"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="6GEL" />


</RelativeLayout>