<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="18dp"
    android:orientation="vertical">

    <include layout="@layout/divider" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="20dp"
        android:text="@string/organization_question"
        android:textColor="#595959"
        android:textStyle="italic|bold" />

    <RadioGroup
        android:id="@+id/organization_radio_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yes_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:padding="5dp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/no_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/no" />

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/organization_fields_id"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/organization_name_id"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/guest_organization_grey"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/delivery_field_organization_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/organization_name_id">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ორგანიზაციის დასახელება"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/code_id"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/guest_org_code"
            tools:ignore="MissingPrefix" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/delivery_field_code_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/delivery_field_organization_name_id"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/code_id">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identification_code"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


</LinearLayout>